--- a/broadcast-app/package.json
+++ b/broadcast-app/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
