--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "file-system": "^2.2.2",
     "mysql": "^2.18.1",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "ws": "^8.18.3"
   }
 }
