Fix TypeScript build errors: add optional chaining for undefined contact properties

--- a/apache-broadcast.conf
+++ b/apache-broadcast.conf
@@ -1,7 +1,11 @@
 # Configuration Apache pour Broadcast App
 # À ajouter dans le VirtualHost existant de www.event2one.com
 
-# Dans le bloc <VirtualHost *:443> de www.event2one.com, ajouter :
+# ============================================
+# IMPORTANT: À ajouter dans le fichier de configuration existant
+# /etc/apache2/sites-available/www.event2one.com.conf
+# Dans le bloc <VirtualHost *:443>
+# ============================================
 
 # Reverse Proxy pour /broadcast
 ProxyPreserveHost On
@@ -16,7 +20,3 @@ RewriteRule /broadcast/(.*) ws://localhost:3001/broadcast/$1 [P,L]
 # Headers de sécurité
 Header always set X-Frame-Options "SAMEORIGIN"
 Header always set X-Content-Type-Options "nosniff"
-
-# Logs spécifiques (optionnel)
-# ErrorLog ${APACHE_LOG_DIR}/broadcast-error.log
-# CustomLog ${APACHE_LOG_DIR}/broadcast-access.log combined
