--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - name: Deploy to Server via SSH
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SSH_PORT || '22224' }} # Updated port to 22224
+        script: |
+          # Navigate to project directory
+          cd /var/www/e2o/broadcast
+
+          # Pull latest changes
+          git pull origin main
+
           # Navigate to broadcast-app
           cd broadcast-app
 
